# ParameterPack

./: CMakeLists.txt  LICENSE  ParameterPack.hpp  README.md  main.cpp
.devcontainer/: Dockerfile
.github/workflows/: ci.yml
doc/: basic_functionality.md  concatenation.md  mix.md  unpack.md  user_manual.org
examples/: ExampleClass.hpp  concat_example.cpp  gtest_example.cpp  mix_example.cpp  typemanager_example.cpp  utils.hpp
include/: ParameterPack.hpp  TypeManager.hpp
test/: basic_test.cpp  concat_example.cpp  concat_test.cpp  gtest_test.cpp  mix_test.cpp  utils.hpp
